fixed spacing issues with css

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,11 +1,9 @@
 #nav-menu   {
     margin-top: 50px;
-    padding-right: 20px;
     justify-content: space-around;
 }
 
 #initials   {
-    margin-left: 20px;
     padding-bottom: 20px;
 }
 
